--- a/index.html
+++ b/index.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delani Studio</title>
+    <title>Delani tudio</title>
 </head>
 <body>
+      <!-- header section -->
+  <header>
+
+</header>
+
+<!-- about sections -->
+<section id="about">
+
+</section>
+
+<!-- service section  -->
+<section id="service">
+
+</section>
+
+<!-- what we do section -->
+<section id="whatwedo">
+
+</section>
+
+<!-- portfolio section   -->
+<section id="portolio">
+
+</section>
+
+<!-- contact section   -->
+<section id="contact">
+
+</section>
+
+<!-- footer section   -->
+<footer>
+
+</footer>
     
 </body>
 </html>
