--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
 <body>
       <!-- header section -->
   <header>
-
-</header>
+      <div class="container">
+          <div class="top-head">
+              <img src="assets/logo/logo.png" alt="Delani logo">
+              <h1>WELCOME</h1>
+              <h1>TO DELANI STUDIO</h1>
+              <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
+          </div>
+          <div class="mouse">
+              <a href="#about"><img src="assets/behance.png" alt="mouse"></a>
+        </div>
+      </div>
+    </header>
 
 <!-- about sections -->
 <section id="about">
