--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     <title>Delani tudio</title>
 </head>
 <body>
@@ -11,7 +15,7 @@
   <header>
       <div class="container">
           <div class="top-head">
-              <img src="assets/logo/logo.png" alt="Delani logo">
+              <img src="assets/logo/logo.png" alt="Delani logo" id="logo">
               <h1>WELCOME</h1>
               <h1>TO DELANI STUDIO</h1>
               <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
@@ -23,7 +27,7 @@
     </header>
 
 <!-- about sections -->
-<section id="about">
+<section>
 
 </section>
 
