--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
       <!-- header section -->
   <header>
-      <div class="container">
+      <div class="container d-md-flex flex-column">
           <div class="top-head">
               <img src="assets/logo/logo.png" alt="Delani logo" id="logo">
               <h1>WELCOME</h1>
@@ -21,7 +21,7 @@
               <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
           </div>
           <div class="mouse">
-              <a href="#about"><img src="assets/behance.png" alt="mouse"></a>
+              <a href="#about"><img src="assets/behance.png" alt="mouse" id="mouse"></a>
         </div>
       </div>
     </header>
