--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
 
 <!-- about sections -->
 <section>
+    <div class="container" id="about-us">
+        <h2 id="about">ABOUT US</h2>
+        <div class="paragraph">
+        <p>When you work with us, you are part of a team of commited collaborators. All aspects of our software
+            development process are intergrated , interactive and agile.</p>
+        <p>Our approach unifies design, development and product managent to create exceptional products.</p>
+        <p>We start each project by understanding your business goals, the users needs and the product requirements.</p>
+        <p>we help translate them into active and elegant solutions.</p>
+        </div>
+    </div>
 
 </section>
 
