--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <!-- about sections -->
 <section>
     <div class="container" id="about-us">
+        <div class="row justify-content-center d-md-flex flex-md-column"></div>
         <h2 id="about">ABOUT US</h2>
         <div class="paragraph">
         <p>When you work with us, you are part of a team of commited collaborators. All aspects of our software
