--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
 
 <!-- service section  -->
 <section id="service">
+    <div class="container">
+        <div class="row justify-content-center d-md-flex flex-md-column">
+          <h3>SERVICES</h3>
+          <div class="paragraph">
+            <p>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to understand your product vission.</p>
+            <p>The outcome of the scoping session a proposal or high-level statement of work.</p>
+            <p>based on your requirements, we can provide a complete offering or just the piece you need. </p>
+          </div>
+        </div>
+      </div>
 
 </section>
 
