--- a/index.html
+++ b/index.html
@@ -58,9 +58,58 @@
 </br>
 </section>
 
+<br>
+
 <!-- what we do section -->
 <section id="whatwedo">
+    <div class= "whatwedo">
+        <h1>What We Do</h1>
+        <div class="row  whatwedo">
+          <!-- design -->
+          <div class="col-md-4">
+            <div id="designs">
+              <h1>DESIGN</h1>
+              <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
+                  Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.
+              </p>
+            </div>
 
+            <figure id = "design">
+              <img src="assets/services_icons/design_icon.png" alt="Design" >
+              <figcaption>DESIGN</figcaption>
+            </figure>
+          </div>
+
+         <!--Development  -->
+         <div class="col-md-4">
+          <div id="development">
+            <h1>DEVELOPMENT</h1>
+            <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.
+              They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+          </div>
+          <figure id="dev">
+            <img src="assets/services_icons/dev_icon.png" alt="development" >
+            <figcaption>DEVELOPMENT</figcaption>
+          </figure>
+        </div>
+
+        <!-- Product -->
+        <div class="col-md-4">
+          <div id="productmanagement">
+            <h1>PRODUCT AND DEVELOPMENT</h1>
+            <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live.
+             This iterative process allows for changes as business requirements evolve.</p>
+          </div>
+          <figure id = "product">
+            <img src="assets/services_icons/product_icon.png" alt="product" >
+            <figcaption>PRODUCT MANAGEMENT</figcaption>
+          </figure>
+        </div>
+
+        </div>
+
+      </div>
+</br>
 </section>
 
 <!-- portfolio section   -->
