add styles to what we do

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
 
 <!-- what we do section -->
 <section id="whatwedo">
-    <div class= "whatwedo">
-        <h1>What We Do</h1>
+    <div class= "whatwedo1">
+        <h1>WHAT WE DO</h1>
+        <br>
         <div class="row  whatwedo">
           <!-- design -->
           <div class="col-md-4">
@@ -96,7 +97,7 @@
         <!-- Product -->
         <div class="col-md-4">
           <div id="productmanagement">
-            <h1>PRODUCT AND DEVELOPMENT</h1>
+            <h1>PRODUCT MANAGEMENT</h1>
             <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live.
              This iterative process allows for changes as business requirements evolve.</p>
           </div>
