Change spelling mistakes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
-    <title>Delani tudio</title>
+    
+    <script src="js/jquery-3.6.0.js"></script>
+    <script src="js/scrips.js"></script>
+    <title>Delani Studio</title>
+
 </head>
 <body>
       <!-- header section -->
@@ -61,57 +65,54 @@
 <br>
 
 <!-- what we do section -->
-<section id="whatwedo">
-    <div class= "whatwedo1">
-        <h1>WHAT WE DO</h1>
-        <br>
-        <div class="row  whatwedo">
-          <!-- design -->
-          <div class="col-md-4">
-            <div id="designs">
-              <h1>DESIGN</h1>
-              <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
-                  Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.
-              </p>
-            </div>
-
-            <figure id = "design">
-              <img src="assets/services_icons/design_icon.png" alt="Design" >
-              <figcaption>DESIGN</figcaption>
-            </figure>
-          </div>
-
-         <!--Development  -->
-         <div class="col-md-4">
-          <div id="development">
-            <h1>DEVELOPMENT</h1>
-            <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.
-              They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
-          </div>
-          <figure id="dev">
-            <img src="assets/services_icons/dev_icon.png" alt="development" >
-            <figcaption>DEVELOPMENT</figcaption>
-          </figure>
+<div class= "whatwedo">
+    <h1>What We Do</h1>
+    <div class="row  whatimages">
+      <!-- design -->
+      <div class="col-md-4">
+        <div id="designp">
+          <h1>DESIGN</h1>
+          <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
+              Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.
+          </p>
         </div>
 
-        <!-- Product -->
-        <div class="col-md-4">
-          <div id="productmanagement">
-            <h1>PRODUCT MANAGEMENT</h1>
-            <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live.
-             This iterative process allows for changes as business requirements evolve.</p>
-          </div>
-          <figure id = "product">
-            <img src="assets/services_icons/product_icon.png" alt="product" >
-            <figcaption>PRODUCT MANAGEMENT</figcaption>
-          </figure>
-        </div>
-
-        </div>
-
+        <figure id = "design">
+          <img src="assets/services_icons/design_icon.png" alt="Design" >
+          <figcaption>DESIGN</figcaption>
+        </figure>
       </div>
-</br>
-</section>
+
+     <!--Development  -->
+     <div class="col-md-4">
+      <div id="devp">
+        <h1>DEVELOPMENT</h1>
+        <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.
+          They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+      </div>
+      <figure id="dev">
+        <img src="assets/services_icons/dev_icon.png" alt="development" >
+        <figcaption>DEVELOPMENT</figcaption>
+      </figure>
+    </div>
+
+    <!-- Product -->
+    <div class="col-md-4">
+      <div id="productp">
+        <h1>PRODUCT AND DEVELOPMENT</h1>
+        <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live.
+         This iterative process allows for changes as business requirements evolve.</p>
+      </div>
+      <figure id = "product">
+        <img src="assets/services_icons/product_icon.png" alt="product" >
+        <figcaption>PRODUCT MANAGEMENT</figcaption>
+      </figure>
+    </div>
+
+    </div>
+
+  </div>
+<!-- end of what we do -->
 
 <!-- portfolio section   -->
 <section id="portolio">
