--- a/index.html
+++ b/index.html
@@ -112,10 +112,91 @@
     </div>
 
   </div>
-<!-- end of what we do -->
+<!-- end of what we do section-->
 
 <!-- portfolio section   -->
-<section id="portolio">
+<section id="portfolio">
+    <div class="container portfolio">
+        <h1>PORTFOLIO</h1>
+        <div class="row">
+          <div class="col-md-3 img_wrap">
+            <img  class = "w-100" src="assets/portfolio/work4.jpg" alt="" >
+             <div class="imgoverlay1">
+               <div class="overlaycontent">
+  
+                  <h1>DARK SCREEN</h1>
+               </div>
+             </div>
+          </div>
+  
+          <div class="col-md-3 port2 img_wrap1">
+            <img  class = "w-100" src="assets/portfolio/work3.jpg" alt="" >
+            <div class="imgoverlay2">
+              <div class="overlaycontent1">
+                <h1>SECURITY LOGO</h1>
+              </div>
+            </div>
+          </div>
+  
+          <div class="col-md-3 port2 img_wrap2">
+            <img  class = "w-100" src="assets/portfolio/work2.jpg" alt="" >
+             <div class="imgoverlay3">
+               <div class="overlaycontent2">
+                <h1>TEXTURES</h1>
+               </div>
+             </div>
+          </div>
+  
+          <div class="col-md-3 port2 img_wrap3">
+            <img  class = "w-100" src="assets/portfolio/work1.jpg" alt="" >
+             <div class="imgoverlay4">
+               <div class="overlaycontent3">
+                <h1>MOVIE WEBSITE</h1>
+               </div>
+             </div>
+          </div>
+        </div>
+  
+  
+        <div class="row port1">
+          <div class="col-md-3 img_wrap4">
+            <img  class = "w-100" src="assets/portfolio/work5.jpg" alt="" >
+             <div class="imgoverlay5">
+               <div class="overlaycontent4">
+                <h1>GOOD DAY</h1>
+               </div>
+             </div>
+          </div>
+  
+          <div class="col-md-3 port2 img_wrap5">
+            <img   class = "w-100" src="assets/portfolio/work6.jpg" alt="" >
+             <div class="imgoverlay6">
+               <div class="overlaycontent5">
+                  <h1>BMI CALCULATOR</h1>
+               </div>
+             </div>
+          </div>
+  
+          <div class="col-md-3 port2 img_wrap6">
+            <img  class = "w-100" src="assets/portfolio/work7.jpg" alt="" >
+             <div class="imgoverlay7">
+               <div class="overlaycontent6">
+                <h1>BURNED LOGO</h1>
+               </div>
+             </div>
+          </div>
+  
+          <div class="col-md-3 port2 img_wrap7">
+            <img  class = "w-100" src="assets/portfolio/work8.jpg" alt="" >
+             <div class="imgoverlay8">
+               <div class="overlaycontent7">
+                  <h1>BAILEY WONGER</h1>
+               </div>
+             </div>
+          </div>
+  
+       </div>
+     </div>
 
 </section>
 
