Add footer page and style it

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
         <div class="row button">
           <div class="col-md-6">
-            <button type="submit" class="btn main-btn pull-right" id = "submit">Send message</button>
+            <button type="submit" class="btn btn-success col-md-3" id = "submit">Submit</button>
           </div>
         </div>
       </div>
@@ -249,6 +249,29 @@
 
 <!-- footer section   -->
 <footer>
+    <div class="container footer">
+
+        <div class="row">
+            <div class="col-md-12 text-center social">
+                <img src="assets/social_icons/twitter.png" alt="twitter">
+      <img src="assets/social_icons/dribble.png" alt="">
+      <img src="assets/social_icons/facebook.png" alt="">
+      <img src="assets/social_icons/g_plus.png" alt="">
+      <img src="assets/social_icons/skype.png" alt="skype">
+      <img src="assets/social_icons/stumble_upon.p" alt="">
+      <img src="assets/social_icons/behance.png" alt="">
+      <img src="assets/social_icons/pinterest.png" alt="">
+      <img src="assets/social_icons/flickr.png" alt="">
+            </div>
+
+        </div>
+        <div class="row rights">
+            <div class=" col-md-12  text-center">
+        <p>DELANI STUDIO<br>2019</p>
+
+            </hr>
+        </div>
+    </div>
 
 </footer>
     
